config knex and update services

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=
+DB_NAME=test_knex
+DB_CLIENT_DEV=mysql
+
+
+DB_URL_PD=
+DB_CLIENT_PD=
+DB_HOST_PD=
+DB_USER_PD=
+DB_PASSWORD_PD=
+DB_NAME_PD=
